--- a/container.css
+++ b/container.css
@@ -7,3 +7,35 @@
   
 }
 
+.container_span {
+    display: block;
+    width: 60%;
+    height: 200px;
+    background-color: antiquewhite;
+}
+
+.bool1 {
+    width: 30px;
+    height: 30px;
+    background-color: rgb(189, 189, 23);
+    border-radius: 50%;
+    position: relative;
+    animation-name: one;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    /* animation-fill-mode: forwards;
+    */
+
+
+}
+@keyframes one {
+    0% {margin-left: 100px;}
+    30% {margin-bottom: 360px;}
+    50% {margin-left: 170px;}
+    /* 50% {bottom: 70px;}
+    100% {left: 170px;} */ 
+
+
+}
+
